deploy/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pcbbq-web
  labels:
    app: pcbbq-web
spec:
  selector:
    app: pcbbq-web
  ports:
    - name: http
      port: 8080
      targetPort: http
